--- a/todo
+++ b/todo
@@ -1,3 +1,9 @@
+1. обновить презентацию из documentary
+1. сделать вторую часть
+
+---
+
+
 чем отличается от других CVS. Как устроена его работа. (edited)
 про сабмодули интересно (edited)
 почему у некоторых в гите разные имена автора коммита и как этого избежать
